--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,10 +3,8 @@
       <ul class=" nav">
       </ul>
       <div class=" copyright">
-        &copy; {{ test | date: "yyyy" }} made with
-        <i class=" tim-icons icon-heart-2"> </i> by
-        <a href="https://www.creative-tim.com?ref=bda-footer" target="_blank"> Jacob Metcalfe </a>
-        for a better web.
+        &copy; {{ test | date: "yyyy" }}
+        <a href="https://github.com/jiggler220/track" target="_blank"> Jacob Metcalfe </a>
       </div>
     </div>
   </footer>
